--- a/src/stylesheets/News.css
+++ b/src/stylesheets/News.css
@@ -1,49 +1,49 @@
-/* ПОТОМ ПЕРЕНЕСТИ В Components.css */ например 
-
-.divwithImage{
+/* ПОТОМ ПЕРЕНЕСТИ В Components.css */
+.divwithImage {
     height: 80vh;
     width: 100%;
     position: absolute;
-}
-.divwithImage::before{
-    content: '';
+  }
+  .divwithImage::before {
+    content: "";
     background-color: rgba(0, 0, 0, 0.513);
     position: absolute;
     width: 100%;
     height: 80vh;
-}
-.BackgroundImageNews{
+  }
+  .BackgroundImageNews {
     width: 100%;
     height: 100%;
     object-fit: cover;
-}
-.contentNews{
+  }
+  .contentNews {
     position: relative;
     z-index: 2;
     color: white;
-}
-.techPart{
+  }
+  .techPart {
     position: absolute;
     margin: 40px 160px 0 160px;
     border: 1px solid red;
     top: 0;
-}
-.divWithFoto{
+  }
+  .divWithFoto {
     display: flex;
     flex-direction: row;
     gap: 10px;
-}
-.divWithFoto img{
+  }
+  .divWithFoto img {
     width: 960px;
     height: 540px;
-}
-.divWithFoto div img{
+  }
+  .divWithFoto div img {
     width: 460px;
     height: 260px;
-}
-.divWithFoto div img:nth-child(1){
+  }
+  .divWithFoto div img:nth-child(1) {
     margin-bottom: 20px;
-}
-body{
+  }
+  body {
     overflow: hidden;
-}
+  }
+  
