--- a/src/index.css
+++ b/src/index.css
@@ -4,12 +4,16 @@
 }
 body {
   margin: 0;
-  padding: 0;
+  padding: 0; 
   font-family: 'Montserrat', sans-serif;
   padding-inline-start: 0px;
   max-width: 100%;
   overflow-x: hidden;
   font-weight: 900;
+}
+p{
+  margin: 0;
+  padding: 0;
 }
 html{
   width: 100%;
@@ -28,4 +32,28 @@ a{
 .FixedB{
   overflow-y:hidden ;
   height: 100vh;
+}
+
+
+
+
+
+
+
+.Scroll {
+  position: fixed;
+  top: 0;
+  z-index: 9999;
+  width: 100%;
+  background-color: #f1f1f1;
+}
+.progress-container {
+  width: 100%;
+  height: 8px;
+  background: #141414;
+}
+.progress-bar {
+  height: 8px;
+  background: #e8aa31;
+  width: 0%;
 }
