--- a/src/stylesheets/Components.css
+++ b/src/stylesheets/Components.css
@@ -552,7 +552,139 @@
     width: 100%;
     height: 100%;
    }
-   
+
+.OursArticles{
+    display: flex;
+    flex-direction: row;
+}
+.NewsR img{
+    width: 375px;
+    height: 200px;
+    object-fit: cover;
+}
+   /* FOOTER */
+hr{
+    margin: 0px 165px;
+    background-color: rgba(255, 255, 255, 0.5);;
+}
+.Footer{
+    background-color: #141414;
+}
+.FDescription{
+    background-image: url(../images/BackImgFooter.png);
+    padding: 60px 163px 60px 163px;
+}
+.FDescription p:nth-child(1){
+    font-weight: 700;
+    font-size: 30px;
+    line-height: 46px;
+    letter-spacing: 0.05em;
+    color: #E8AA31;
+    text-align: center;
+}
+.FDescription p:nth-child(2){
+    margin-top: 30px;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 27px;  
+    letter-spacing: 0.03em;
+    color: #FFFFFF;
+}
+.FInfo,
+.FContacts{
+    display: flex;
+    flex-direction: row;
+    padding: 102px 375px 30px 163px;
+}
+.FInfo div,
+.FContacts div{
+    display: flex;
+    flex-direction: row;
+    width: 50%;
+}
+.FInfo ol,
+.FContacts ol{
+    flex: 1 1 auto;
+}
+.FInfo ol li,
+.FContacts ol li{
+    font-style: normal;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 22px;
+    color: rgba(255, 255, 255, 0.8);
+    margin-top: 20px;
+}
+.FInfo ol li:nth-child(1),
+.FContacts ol li:nth-child(1){
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 22px;
+    color: #FFFFFF;
+    margin-bottom: 3px;
+    margin-top: 0px;
+}
+.FContacts div ol li .Con{
+    margin-right: 16px;
+}
+.OurRules{
+    color: #E8AA31;
+}
+.FContacts{
+
+}
+.FDetails{
+
+}
+
+.FContacts div:nth-child(1) ol:nth-child(1) li{
+    display: flex;
+    flex-direction: row;
+}
+.Input input{
+    background-color: #202020;
+    border: 1px solid white;
+    border-radius: 3px;
+    width: 325px;
+    height: 50px;
+    padding-left:19px;
+}
+.Input input::placeholder{
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 20px;
+    color: rgba(255, 255, 255, 0.52);
+}
+.Input button{
+    padding: 0;
+    width: 50px;
+    height: 50px;
+    background: #E8AA31;
+    border: none;
+}
+.Input button i{
+    margin: 0;
+    color: white;
+}
+.Input{
+    display: flex;
+    flex-direction: row;
+}
+.CheckBOX{
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+}
+.CheckBOX span{
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 22px;
+    color: rgba(255, 255, 255, 0.8);
+}
+
+
+
+
    /* МЕДИА ЗАПРОСЫ */
    @media (max-width: 1853px) {
     .CenterDown {
