--- a/src/stylesheets/Components.css
+++ b/src/stylesheets/Components.css
@@ -668,6 +668,7 @@ hr {
 
 .Footer {
     background-color: #141414;
+    padding-bottom: 60px;
 }
 
 .FDescription {
@@ -759,7 +760,10 @@ hr {
 
 .FContacts {}
 
-.FDetails {}
+.FDetails{
+    margin-top: 30px;
+    padding-bottom: 50px;
+}
 
 .FContacts div:nth-child(1) ol:nth-child(1) li {
     display: flex;
@@ -786,7 +790,7 @@ hr {
     padding: 0;
     width: 50px;
     height: 50px;
-    background: red;
+    background: rgba(249, 64, 64, 0.899);
     border: none;
 }
 
@@ -865,6 +869,15 @@ hr {
 }
 .BtnF{
     transition: 0.5s;
+}
+.MedaiSoc{
+    margin-left: 164px;
+    margin-bottom: 30px;
+}
+.MedaiSoc img{
+    width: 50px;
+    height: 50px;
+    margin-right: 22px;
 }
 
 
